--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://www.raycast.com/schemas/extension.json",
-  "name": "cg-raycast",
+  "name": "cf-raycast",
   "title": "CG Raycast",
   "description": "A Raycast extension for fast querying of cryptocurrency data.",
   "icon": "icon.png",
@@ -62,8 +62,8 @@
     "@raycast/eslint-config": "^2.0.4",
     "@types/node": "^22.13.10",
     "@types/react": "^19.0.12",
-    "eslint": "^9.22.0",
-    "react": "^19.0.0",
+    "eslint": "9.22.0",
+    "react": "19.0.0",
     "typescript": "^5.8.2"
   },
   "scripts": {
